# discord-voice-tray

./: .gitignore  Cargo.toml  README.md
docs/: development.md  troubleshooting.md
scripts/: build-icons.sh  gen-icons.py
src/: config.rs  main.rs  state.rs  tray.rs
src/ipc/: client.rs  mod.rs  protocol.rs  socket.rs
systemd/: discord-voice-tray.service
