[package]
name = "discord-voice-tray"
version = "0.1.0"
edition = "2021"
description = "Discord voice status indicator for the Linux system tray"
license = "MIT"

[dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ksni = "0.3.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
toml = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
